src/styles/styles.scss
@import url("https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400;1,600;1,700&family=Open+Sans:wght@400;500;600;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  color-scheme: dark;
  --accent: #ddbf98;
  // --accent: white;
  --accent-05: #b39b7c7d;
  --accent-08: #ddbf982b;
  --primary: #fb4934;
  // --primary: #b24b0b;

  --background: #141414;
  --background-1: #181818;
  --background-2: #242428;
  --foreground: #ddbf98;

  --text: 20px;

  --border-radius: 8px;
  --border: 1px solid #323234;
  --border-primary: 1px solid var(--primary);

  --box-shadow: rgba(255, 105, 98, 0.15) 10px 12px 38px,
    rgba(0, 0, 0, 0.115) 0px 15px 12px;

  --padding: 4px;

  --skeleton: skeleton-loading 1s linear infinite alternate;
}

::selection {
  color: white;
  background-color: var(--primary);
}

@keyframes skeleton-loading {
  0% {
    background: var(--background-1);
  }
  100% {
    background: var(--background-2);
  }
}

html,
body {
  color: var(--foreground);
  background-color: var(--background);
  font-size: var(--text);
  font-family: "Fira Sans", sans-serif;
}

html {
  // scrollbar-color: var(--primary) var(--accent-05);
  scrollbar-color: #fd9000 var(--background);
}

